--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,46 +1,7 @@
 .App {
   text-align: center;
   background-color:'#EC4C47';
-  height: 100vh;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.css-13qcn8a, [data-css-13qcn8a] {
-  background-color: black;
-  border-radius: 9999px;
+  height: 100%;
+  width: 100%;
 }
 
